--- a/Main.html
+++ b/Main.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html HTML PUBLIC>
 <html>
 <head>
+  <title>Fake_Google</title>
 </head>
-
 <body>
-
+  <center>
+  	<img src="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png" Dis is Guggl.>
+    <b>Dis is fak guugl.</b>
+  </center>
 </body>
 </html>
