--- a/Main.html
+++ b/Main.html
@@ -5,8 +5,8 @@
 </head>
 <body>
   <center>
-  	<img src="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png" Dis is Guggl.>
-    <b>Dis is fak guugl.</b>
+  	<img src="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png" Dis is Guggl./>
+    <p><b>Dis is fak guugl.</b></p>
   </center>
 </body>
 </html>
