--- a/Muffin_Land.html
+++ b/Muffin_Land.html
@@ -9,7 +9,7 @@
   	 <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Muffin_NIH.jpg" width="200" Le_Muff> 
   </center>
   <p>Seit 2015 betreibt unsere Tante Frieda erfolgreich einen Muffin Shop.</p>
-  <p>Wir bieten Muffins aller Art: Ob Schokolade, Erdbeer, Vanille, Karotte, wir haben alles! Wir garantieren, dass all unsere verwendeten Zutaten aus 100% biologischem Anbau stammen und jeden Tag frisch gebacken werden.  Auf Wunsch sind unsere Muffins auch laktose- und glutenfrei erhältlich.  </p>
+  <p>Wir bieten Muffins aller Art an: Ob Schokolade, Erdbeer, Vanille, wir haben alles! Wir garantieren, dass alle verwendeten Zutaten aus 100% biologischem Anbau stammen und jeder Muffin an diesem Tag frisch gebacken wird.  Auf Wunsch sind unsere Muffins auch laktose- und glutenfrei erh&aumlltlich.  </p>
 <ul>
   <li> <a href="http://www.muffin-welt.de"> </a> Muffin Welt</li>
   <li> <a href="http://www.chefkoch.de/rs/s0/muffin/Rezepte.html"> </a> Rezepte Chefkoch.de</li>
