--- a/Muffin_Land.html
+++ b/Muffin_Land.html
@@ -8,13 +8,18 @@
     <h1>Willkommen im Muffin-Land!</h1>
   	 <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Muffin_NIH.jpg" width="200" Le_Muff> 
   </center>
-  <p>Seit 2015 betreibt unsere Tante Frieda erfolgreich einen Muffin Shop.</p>
-  <p>Wir bieten Muffins aller Art an: Ob Schokolade, Erdbeer, Vanille, wir haben alles! Wir garantieren, dass alle verwendeten Zutaten aus 100% biologischem Anbau stammen und jeder Muffin an diesem Tag frisch gebacken wird.  Auf Wunsch sind unsere Muffins auch laktose- und glutenfrei erh&aumlltlich.  </p>
+  <p>Seit 2015 betreibt unsere Tante Frieda erfolgreich einen <b>Muffin Shop</b>.</p>
+  <p>Wir bieten Muffins aller Art an: Ob Schokolade, Erdbeer, Vanille, wir haben alles! Wir garantieren, dass alle verwendeten Zutaten aus <i><b>100% biologischem Anbau</b></i> stammen und jeder Muffin an diesem Tag frisch gebacken wird.  Auf Wunsch sind unsere Muffins auch <i><b>laktose-</b></i> und <i><b>glutenfrei</b></i> erh&aumlltlich.  </p>
 <ul>
   <li> <a href="http://www.muffin-welt.de"> </a> Muffin Welt</li>
   <li> <a href="http://www.chefkoch.de/rs/s0/muffin/Rezepte.html"> </a> Rezepte Chefkoch.de</li>
   <li> <a href="http://www.bettybossi.ch/de/schwerpunkt/3927_iwb_spkt_reze.aspx"> </a> Rezepte Betti Bossi</li>
 </ul>
+  <p>Bei Fragen z&oumlgern sie nicht Kontakt mit uns aufzunehmen:</p>
+  <p>Email: frieda@muffin-land.ch</p>
+  <p>Telefon: 077 323 23 23</p>
+  <p>Adresse: Tante Frieda, Muffinweg 2, 1700 Fribourg</p>
+  <h5><b>&Oumlffnungszeiten: Mo-Fr 9:00 - 18:00 Uhr</b></h5>
   </body>
   
 </html>
