--- a/Muffin_Land.html
+++ b/Muffin_Land.html
@@ -8,12 +8,12 @@
     <h1>Willkommen im Muffin-Land!</h1>
   	 <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Muffin_NIH.jpg" width="200" Le_Muff> 
   </center>
-  <p>Seit 2015 betreibt unsere Tante Frieda erfolgreich einen <b>Muffin Shop</b>.</p>
-  <p>Wir bieten Muffins aller Art an: Ob Schokolade, Erdbeer, Vanille, wir haben alles! Wir garantieren, dass alle verwendeten Zutaten aus <i><b>100% biologischem Anbau</b></i> stammen und jeder Muffin an diesem Tag frisch gebacken wird.  Auf Wunsch sind unsere Muffins auch <i><b>laktose-</b></i> und <i><b>glutenfrei</b></i> erh&aumlltlich.  </p>
+  <p>Seit 2015 betreibt unsere Tante Frieda erfolgreich einen <b>Muffin Shop</b>.</br>
+  Wir bieten Muffins aller Art an: Ob Schokolade, Erdbeer, Vanille, wir haben alles! Wir garantieren, dass alle verwendeten Zutaten aus <i><b>100% biologischem Anbau</b></i> stammen und jeder Muffin an diesem Tag frisch gebacken wird.  Auf Wunsch sind unsere Muffins auch <i><b>laktose-</b></i> und <i><b>glutenfrei</b></i> erh&aumlltlich.  </p>
 <ul>
-  <li> <a href="http://www.muffin-welt.de"> </a> Muffin Welt</li>
-  <li> <a href="http://www.chefkoch.de/rs/s0/muffin/Rezepte.html"> </a> Rezepte Chefkoch.de</li>
-  <li> <a href="http://www.bettybossi.ch/de/schwerpunkt/3927_iwb_spkt_reze.aspx"> </a> Rezepte Betti Bossi</li>
+  <li> <a href="http://www.muffin-welt.de"> Muffin Welt </a></li>
+  <li> <a href="http://www.chefkoch.de/rs/s0/muffin/Rezepte.html">  Rezepte Chefkoch.de</a></li>
+  <li> <a href="http://www.bettybossi.ch/de/schwerpunkt/3927_iwb_spkt_reze.aspx"> Rezepte Betti Bossi</a></li>
 </ul>
   <p>Bei Fragen z&oumlgern sie nicht Kontakt mit uns aufzunehmen:</p>
   <p>Email: frieda@muffin-land.ch</p>
