--- a/Main.html
+++ b/Main.html
@@ -5,8 +5,13 @@
 </head>
 <body>
   <center>
-  	<img src="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png" Dis is Guggl./>
-    <p><b>Dis is fak guugl.</b></p>
+  	<img src="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png" width="600" /></br>
+	<img src="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png" width="500"/></br>
+	<img src="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png" width="400"/></br>
   </center>
+    <p><b>Dis is fak guugl.</b></br>
+		<font color="blue"> Dis is blu tex. </font></br>
+		<font size="20"> Dis is big tex. </font>
+	</p>
 </body>
 </html>
